--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ solace.jms.msgVpn=default
 solace.jms.clientUsername=default
 solace.jms.clientPassword=default
 
-app.queue.name=hkjc-poc-queue
+app.queue.name=hkjc-poc-queue-2
 
-server.port=24680
+server.port=24681
